# py-simputils-events

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/simputils/: SimpleEventManager.py
src/simputils/events/: AttachedEventCallback.py  AttachedEventHandler.py  GenericEvent.py  SimpleEvent.py  SimpleEventManager.py  SimpleEventObj.py  SimpleEventingObj.py  base.py  types.py
src/simputils/events/abstract/: Eventful.py
src/simputils/events/auxiliary/: AttachedEventHandler.py  EventResults.py  EventingMixin.py  EventsResult.py  RawEventManager.py  RunnableObject.py  SingletonMeta.py
src/simputils/events/auxiliary/helpers/: eventing.py
src/simputils/events/components/: BasicEvent.py  BasicEventsResult.py
src/simputils/events/definitions/: EventAfter.py  EventBefore.py
src/simputils/events/exceptions/: ActionMustBeConfirmed.py  InterruptEventSequence.py  NotPermittedEvent.py
src/simputils/events/generic/: BasicEventDefinition.py  BasicEventException.py  BasicEventHandler.py  BasicEventObject.py  BasicEventRuntime.py  BasicEventingFoundation.py  BasicEventingObject.py  BasicEventsException.py  BasicRuntime.py  BasicTypicalEventDefinition.py
src/simputils/events/runtimes/: DefaultParallelRuntime.py  DefaultSequentialRuntime.py  LocalParallelRuntime.py  LocalSequentialRuntime.py
src/simputils/events/typical/: EventAfter.py  EventBefore.py  EventDuring.py  TypicalEventEnum.py
tests/acceptance/: TestBasicUsage.py
tests/unit/: TestGeneral.py  TestUseCase1.py
